<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<EditText
    android:id="@+id/name_edit_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/add_name"
    android:inputType="textCapCharacters"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/toppings"
            android:textAllCaps="false"
            android:layout_marginStart="16dp" />

        <CheckBox
            android:id="@+id/whipped_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onCheckWhipped"
            android:paddingLeft="24dp"
            android:text="@string/whippedCream"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:paddingStart="24dp"
            tools:ignore="RtlSymmetry" />
        <CheckBox
            android:id="@+id/chocolate_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onCheckChocolate"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:paddingStart="24dp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:layout_marginStart="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/decriment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="dec"
                android:text="@string/minus_icon"
                android:textAllCaps="true"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/zero"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp" />

            <Button
                android:id="@+id/increment_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="inc"
                android:text="@string/plus_icon"
                android:textAllCaps="true"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/orderSummary"
            android:textAllCaps="true"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/zero"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true"
            android:layout_marginStart="16dp" />
    </LinearLayout>

</ScrollView>